--- a/src/view/Home.form
+++ b/src/view/Home.form
@@ -148,6 +148,7 @@
                 <Property name="borderPainted" type="boolean" value="true"/>
               </Properties>
               <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jCbxRestauranteStatusMouseClicked"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCbxRestauranteStatusActionPerformed"/>
               </Events>
             </Component>
